[package]
name = "cef-ui"
version = "0.1.0"
authors = ["Galang Indra <51304312+galangindraa@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "cef_ui"
crate-type = ["cdylib"]

[dependencies]
samp = {git="https://github.com/ZOTTCE/samp-rs/",branch="async-amx",features = ["async"]}
log = "0.4.6"
fern = "0.5.7"